--- a/anhblue.plist
+++ b/anhblue.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/w8i9gpvg07g2gg5/anhblue.ipa?dl=1</string>
+					<string>https://www.dropbox.com/s/bfj3ma33fd5o6f8/Anh%20Blue%2070%24_2.ipa?dl=1</string>
 				</dict>
 				<dict>
                     <key>kind</key>
