--- a/ios/fb.plist
+++ b/ios/fb.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/vlwj0ozsp98gn79/Anh%20Blue%2070%24.ipa?dl=1</string>
+					<string>https://www.dropbox.com/s/1q5o4t9qt43vu80/anhbluee.ipa?dl=1</string>
 				</dict>
 				<dict>
                     <key>kind</key>
